[gd_scene load_steps=7 format=3 uid="uid://cj3l5q62epbji"]

[ext_resource type="Theme" uid="uid://bmnlkeb5yfupy" path="res://resources/default_theme.tres" id="1_101pm"]
[ext_resource type="Script" path="res://scripts/play.gd" id="2_clrs4"]
[ext_resource type="PackedScene" uid="uid://c0kd3jux5k5k6" path="res://scenes/board.tscn" id="2_hgrrs"]
[ext_resource type="PackedScene" uid="uid://bvwuid1wk8tv0" path="res://scenes/hud.tscn" id="3_cqrnu"]
[ext_resource type="Texture2D" uid="uid://dxgyp2e42cpqm" path="res://imgs/happy.png" id="3_lanb8"]

[sub_resource type="LabelSettings" id="LabelSettings_mobuj"]
font_size = 60
outline_size = 18
outline_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_101pm")
script = ExtResource("2_clrs4")

[node name="bg" type="ColorRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.286275, 0.247059, 0.403922, 1)

[node name="board" parent="." instance=ExtResource("2_hgrrs")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.155
anchor_right = 1.0
anchor_bottom = 0.655
offset_top = 0.5
offset_right = 0.0
offset_bottom = 0.5
mouse_filter = 2
colors = Array[Color]([Color(0.898039, 0.541176, 0.392157, 1), Color(0.713726, 0.290196, 0.290196, 1)])

[node name="avatars" type="Node2D" parent="."]
z_index = 2

[node name="mines" type="Node2D" parent="."]
z_index = 2

[node name="touch_spots" type="Node2D" parent="."]

[node name="game_over" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -722.0
offset_right = 309.0
offset_bottom = -636.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_mobuj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ui" type="Control" parent="."]
visible = false
z_index = 30
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="hud" parent="ui" instance=ExtResource("3_cqrnu")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
offset_top = -559.0
offset_bottom = -159.0
grow_vertical = 0

[node name="quit" type="Button" parent="ui"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -116.0
offset_top = -131.0
offset_right = 116.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Quit"

[node name="player" type="Sprite2D" parent="ui"]
position = Vector2(-336, 1385)
texture = ExtResource("3_lanb8")

[node name="action" type="Label" parent="ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 337.0
offset_top = 943.0
offset_right = 652.0
offset_bottom = 1029.0
grow_horizontal = 2
grow_vertical = 2
text = "Turn"
label_settings = SubResource("LabelSettings_mobuj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="win_record" type="Label" parent="ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 228.0
offset_top = 1152.0
offset_right = 543.0
offset_bottom = 1238.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_mobuj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cards" type="Node2D" parent="."]
position = Vector2(0, 1188)

[node name="mana" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 1123.0
offset_right = 50.0
offset_bottom = 1184.0
text = "mana: 3"

[connection signal="pressed" from="ui/quit" to="." method="_on_quit_pressed"]
